--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -43,21 +43,6 @@ jobs:
             ${{ env.DOCKER_NAMESPACE }}/${{ env.DOCKER_IMAGE_NAME }}:latest
           file: ${{ env.DOCKERFILE }}
 
-      - name: extract ffmpeg config.log from Docker image
-        if: failure()
-        run: |
-          docker create --name temp-container ${{ env.DOCKER_NAMESPACE }}/${{ env.DOCKER_IMAGE_NAME }}:latest
-          docker cp temp-container:/tmp/ffmpeg/ffbuild/config.log ./ffmpeg-config.log || echo "config.log not found"
-          docker rm temp-container
-
-      - name: upload ffmpeg config.log as artifact
-        uses: actions/upload-artifact@v4
-        if: failure()
-        with:
-          name: ffmpeg-config-log
-          path: ./ffmpeg-config.log
-          if-no-files-found: warn
-
       - name: login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -88,6 +73,6 @@ jobs:
           context: ${{ env.CONTEXT_DIR }}
           push: true
           tags: |
-            ${{ secrets.CUSTOM_REGISTRY_URL }}/${{ env.CUSTOM_REGISTRY_USERNAME }}/${{ env.DOCKER_IMAGE_NAME }}:${{ env.RUNNER_VERSION }}
-            ${{ secrets.CUSTOM_REGISTRY_URL }}/${{ env.CUSTOM_REGISTRY_USERNAME }}/${{ env.DOCKER_IMAGE_NAME }}:latest
+            ${{ secrets.CUSTOM_REGISTRY_URL }}/${{ secrets.CUSTOM_REGISTRY_USERNAME }}/${{ env.DOCKER_IMAGE_NAME }}:${{ env.RUNNER_VERSION }}
+            ${{ secrets.CUSTOM_REGISTRY_URL }}/${{ secrets.CUSTOM_REGISTRY_USERNAME }}/${{ env.DOCKER_IMAGE_NAME }}:latest
           file: ${{ env.DOCKERFILE }}
